--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.3",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.6",
+    "nodemailer": "^6.9.7",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
