--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.6",
     "nodemailer": "^6.9.7",
+    "postcss-nesting": "^12.0.2",
     "sharp": "^0.32.6",
     "tailwindcss": "^3.0.24",
     "typescript": "^5.2.2"
