--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.3.3",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.6",
+    "leaflet": "^1.9.4",
     "nodemailer": "^6.9.7",
     "postcss-nesting": "^12.0.2",
     "sharp": "^0.32.6",
