--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.3",
+    "@astrojs/node": "^7.0.4",
     "@astrojs/tailwind": "^5.0.3",
     "astro": "^4.0.6",
     "leaflet": "^1.9.4",
